Fix: issue where Teams icon was not showing because of using % width and no height

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -630,6 +630,8 @@ header {
 
 .app-icons--container img {
     width: 50%;
+    height: 7rem;
+    object-fit: contain;
 }
 
 .app-icons--container a {
